docs: 优化文档格式并添加 changelog 组件
- 修复 auto-form 文档中代码块的缩进格式
- 为 useAutoForm 和 useDateFormatter 文档添加 changelog 展示
- 移除文档末尾冗余的导航卡片组

--- a/docs/content/docs/3.auto-form/1.index.md
+++ b/docs/content/docs/3.auto-form/1.index.md
@@ -91,22 +91,22 @@ const schema = afz.object({
 2. **链式调用保留** - 调用 `.optional()`、`.default()` 等方法时元数据不会丢失
 3. **控件映射** - 自动将 Zod 类型映射到对应的 UI 控件
 
-::code-group
-```ts [✅ 正确用法]
-// 使用 afz，元数据完整传递
-const schema = afz.object({
-  username: afz.string().meta({ label: '用户名' }).optional()
-})
-```
+  ::code-group
+  ```ts [✅ 正确用法]
+  // 使用 afz，元数据完整传递
+  const schema = afz.object({
+    username: afz.string().meta({ label: '用户名' }).optional()
+  })
+  ```
 
-```ts [⚠️ 不推荐]
-// 原生 Zod 可能丢失 UI 配置
-import { z } from 'zod/v4'
-const schema = z.object({
-  username: z.string() // 无法配置 label、placeholder 等
-})
-```
-::
+  ```ts [⚠️ 不推荐]
+  // 原生 Zod 可能丢失 UI 配置
+  import { z } from 'zod/v4'
+  const schema = z.object({
+    username: z.string() // 无法配置 label、placeholder 等
+  })
+  ```
+  ::
 ::
 
 ### 控件映射
@@ -148,60 +148,6 @@ const schema = afz.object({
 了解所有可用的元数据属性和配置优先级。
 ::
 
-## 下一步
+## Changelog
 
-::card-group
-  ::card
-  ---
-  title: 字段类型
-  icon: i-lucide-type
-  to: /docs/auto-form/field
-  ---
-  了解 AutoForm 支持的所有字段类型及其用法
-  ::
-
-  ::card
-  ---
-  title: 配置系统
-  icon: i-lucide-settings
-  to: /docs/auto-form/configuration
-  ---
-  深入掌握元数据、控件配置和全局配置
-  ::
-
-  ::card
-  ---
-  title: 插槽系统
-  icon: i-lucide-puzzle
-  to: /docs/auto-form/slots
-  ---
-  学习如何自定义表单的各个部分
-  ::
-
-  ::card
-  ---
-  title: 布局系统
-  icon: i-lucide-layout
-  to: /docs/auto-form/layout
-  ---
-  掌握表单布局和组织结构的控制
-  ::
-
-  ::card
-  ---
-  title: 进阶功能
-  icon: i-lucide-sparkles
-  to: /docs/auto-form/advanced
-  ---
-  探索条件渲染、动态数组等高级特性
-  ::
-
-  ::card
-  ---
-  title: API 参考
-  icon: i-lucide-book-open
-  to: /docs/auto-form/api
-  ---
-  查看完整的 Props、Slots、Emits 文档
-  ::
-::
+:commit-changelog{prefix="/components"}
