--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -6,32 +6,36 @@ description: 在 Nuxt 4 项目中安装和配置 Movk Nuxt 模块
 ## 环境要求
 
 ::callout{color="info"}
-- **Node.js** - `^18.x || ^20.x || ^22.x`
+- **Node.js** - ^20.x || ^22.x`
 - **Nuxt** - `^4.2.0`（需要 Nuxt 4）
 - **包管理器** - pnpm / npm / yarn
 ::
 
-## 安装依赖
+## 添加到 Nuxt 项目
+
+::steps{level="3"}
+
+### 安装依赖
+
+::warning
+`@movk/nuxt` 依赖 **@nuxt/ui** 和 **zod**，请确保已安装。
+::
 
 ::code-group
 ```bash [pnpm]
-pnpm add @movk/nuxt
+pnpm add @movk/nuxt zod
 ```
 
 ```bash [npm]
-npm install @movk/nuxt
+npm install @movk/nuxt zod
 ```
 
 ```bash [yarn]
-yarn add @movk/nuxt
+yarn add @movk/nuxt zod
 ```
 ::
 
-::note
-Movk Nuxt 依赖 **@nuxt/ui** 提供基础组件，安装时会自动安装相关依赖。
-::
-
-## 模块配置
+### 模块配置
 
 在 `nuxt.config.ts` 中注册模块：
 
@@ -41,7 +45,9 @@ export default defineNuxtConfig({
 })
 ```
 
-### 可选配置
+::
+
+## 可选配置
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
