docs: 修复安装文档格式并补充 pnpm 配置说明
- 修复 Node.js 版本要求的 markdown 格式错误
- 在安装命令中添加 @nuxt/ui 依赖
- 补充 pnpm 用户需要配置 shamefully-hoist 的警告说明

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -6,7 +6,7 @@ description: 在 Nuxt 4 项目中安装和配置 Movk Nuxt 模块
 ## 环境要求
 
 ::callout{color="info"}
-- **Node.js** - ^20.x || ^22.x`
+- **Node.js** - `^20.x || ^22.x`
 - **Nuxt** - `^4.2.0`（需要 Nuxt 4）
 - **包管理器** - pnpm / npm / yarn
 ::
@@ -15,23 +15,28 @@ description: 在 Nuxt 4 项目中安装和配置 Movk Nuxt 模块
 
 ::steps{level="3"}
 
-### 安装依赖
+### 安装所需依赖
 
 ::warning
 `@movk/nuxt` 依赖 **@nuxt/ui** 和 **zod**，请确保已安装。
 ::
 
+::warning
+如果你使用的是 pnpm，请确保你在 `.npmrc` 文件中设置 `shamefully-hoist=true` ，或者在项目的根目录中安装 `tailwindcss` 。
+::
+
+
 ::code-group
 ```bash [pnpm]
-pnpm add @movk/nuxt zod
+pnpm add @movk/nuxt @nuxt/ui zod
 ```
 
 ```bash [npm]
-npm install @movk/nuxt zod
+npm install @movk/nuxt @nuxt/ui zod
 ```
 
 ```bash [yarn]
-yarn add @movk/nuxt zod
+yarn add @movk/nuxt @nuxt/ui zod
 ```
 ::
 
