docs: 重构文档结构并新增 API 相关文档
- 删除旧的文档文件(llms.md、use-auto-form.md、use-date-formatter.md)
- 新增编号的 composables 文档(01-07),包含新增的 API 相关文档
- 更新快速开始文档,补充 API System 说明
- 调整 LLM 集成文档位置和分类配置
- 优化文档导航和分类展示

--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -1,16 +1,16 @@
 ---
 title: 快速开始
-description: Movk Nuxt 是一个模块化的 Nuxt 4 工程套件，提供自动化系统、独立组件和通用工具函数
+description: Movk Nuxt 是一个模块化的 Nuxt 4 工程套件，提供 Schema 驱动表单、API 集成、独立组件和通用工具函数
 ---
 
 ## 介绍
 
-Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engineering Suite)。它采用**分层架构**设计，旨在通过高度抽象的自动化系统（如 AutoForm）解决重复性工作，同时提供高质量的独立组件（如 DatePicker）和组合式函数以满足定制化需求。
+Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engineering Suite)。它采用**分层架构**设计，旨在通过高度抽象的自动化系统（如 AutoForm、API System）解决重复性工作，同时提供高质量的独立组件（如 DatePicker）和组合式函数以满足定制化需求。
 
 构建在 [Nuxt UI](https://ui.nuxt.com) 之上，Movk Nuxt 遵循相同的设计原则：美观、可访问、开发者友好。
 
 ::callout{icon="i-lucide-rocket" color="primary"}
-遵循**渐进式采用**原则——你可以只用它的日期处理工具，也可以只用它的 UI 组件，或者使用全自动化的 **AutoForm**/**AutoTable** 系统。
+遵循**渐进式采用**原则——你可以只用它的日期处理工具，也可以只用它的 UI 组件，或者使用全自动化的 **AutoForm** 和 **API System**。
 ::
 
 ## 核心特性
@@ -21,7 +21,7 @@ Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engine
   :::
 
   :::card{icon="i-lucide-zap" title="自动化系统"}
-  **AutoForm** 通过 Schema 定义自动生成完整表单界面。**AutoTable**（规划中）将复用相同的 Schema 定义。
+  **AutoForm** 通过 Schema 定义自动生成完整表单界面，**API System** 提供统一的请求和认证管理。
   :::
 
   :::card{icon="i-lucide-package" title="独立组件库"}
@@ -29,7 +29,7 @@ Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engine
   :::
 
   :::card{icon="i-lucide-wrench" title="通用工具函数"}
-  `useDateFormatter` 等高质量 composables，即使不使用表单系统也可独立使用。
+  `useDateFormatter`、`useApiFetch`、`useApiAuth` 等高质量 composables，即使不使用自动化系统也可独立使用。
   :::
 ::
 
@@ -40,7 +40,8 @@ Movk Nuxt 采用清晰的分层架构：
 ::note{icon="i-lucide-layers"}
 **架构层级**
 
-- **Core Systems** - AutoForm（已发布）、AutoTable（规划中）
+- **Core Systems** - AutoForm（Schema 驱动表单）
+- **API System** - useApiFetch、useApiAuth、useUploadWithProgress、useDownloadWithProgress（API 请求与认证）
 - **Standalone Components** - DatePicker、StarRating、WithCopy 等独立 UI 组件
 - **Composables** - useDateFormatter、useAutoForm 等通用组合式函数
 - **Foundation** - 基于 [Nuxt UI](https://ui.nuxt.com)、[Zod v4](https://zod.dev)、[VueUse](https://vueuse.org)
@@ -50,10 +51,22 @@ Movk Nuxt 采用清晰的分层架构：
 
 ### AutoForm - Schema 驱动的表单系统
 
-基于 Zod Schema 的"定义即渲染"表单解决方案，支持 15+ 种控件类型、布局系统、依赖联动等高级特性。
+基于 Zod Schema 的「定义即渲染」表单解决方案，支持 15+ 种控件类型、布局系统、依赖联动等高级特性。
 
 ::tip{icon="i-lucide-book-open" to="/docs/auto-form"}
 深入了解 AutoForm 的核心概念和使用方法
+::
+
+### API System - 统一的请求与认证
+
+提供完整的 API 请求和认证方案，与 nuxt-auth-utils 无缝集成：
+
+- `useApiFetch` - 基于 useFetch 封装，支持自动认证、业务状态码检查、Toast 提示
+- `useApiAuth` - 登录、登出、Session 管理
+- `useUploadWithProgress` / `useDownloadWithProgress` - 带进度监控的文件上传下载
+
+::tip{icon="i-lucide-cloud" to="/docs/composables/use-api-fetch"}
+了解 API System 的使用方法
 ::
 
 ### 独立组件 - 开箱即用
@@ -73,16 +86,16 @@ Movk Nuxt 采用清晰的分层架构：
 - `useDateFormatter` - 强大的日期格式化、解析、范围处理工具
 - `useAutoForm` - AutoForm 的核心逻辑封装
 
-::tip{icon="i-lucide-wrench" to="/docs/composables/use-auto-form"}
+::tip{icon="i-lucide-wrench" to="/docs/composables/use-date-formatter"}
 查看所有 Composables
 ::
 
 ## 开发路线图
 
 ::callout{icon="i-lucide-map" color="primary"}
-**正在开发**
+**已发布**
 
-- ✅ **AutoForm** - Schema 驱动的表单系统（已发布）
-- 🚧 **AutoTable** - 将复用相同的 Zod Schema，实现定义一次，既生成表单又生成表格
-- 🚧 **UseApi** - 将与 AutoForm 的提交逻辑无缝集成，处理加载状态和错误回显
+- ✅ **AutoForm** - Schema 驱动的表单系统
+- ✅ **API System** - API 请求封装和认证管理（useApiFetch、useApiAuth、useUploadWithProgress、useDownloadWithProgress）
+- ✅ **独立组件库** - DatePicker、StarRating、WithCopy 等组件
 ::
