--- a/docs/content/docs/1.getting-started/4.llms.md
+++ b/docs/content/docs/1.getting-started/4.llms.md
@@ -1,6 +1,7 @@
 ---
 title: LLM 集成
 description: 了解 Movk Nuxt 如何利用 Nuxt LLMs 模块自动生成 AI 就绪的内容文件，并学习如何自定义 LLM 相关数据
+category: ai
 ---
 
 ## 什么是 llms.txt？
