--- a/docs/content/docs/4.composables/07.use-date-formatter.md
+++ b/docs/content/docs/4.composables/07.use-date-formatter.md
@@ -201,7 +201,38 @@ const isoString = formatter.toISO(today)
 
 ::field-group
   ::field{name="getDayOfWeek()" type="(date: DateValue) => number"}
-  获取星期几（0-6，0 为本地化的一周第一天）。
+  获取星期几数字（0-6，0 为本地化的一周第一天）。
+  ::
+
+  ::field{name="getDayOfWeekName()" type="(date: DateValue, style?: 'narrow' | 'short' | 'long') => string"}
+  获取本地化的星期几名称。
+
+  ::collapsible
+    **Parameters**
+
+    ::field-group
+      ::field{name="date" type="DateValue" required}
+      日期对象。
+      ::
+
+      ::field{name="style" type="'narrow' | 'short' | 'long'"}
+      格式样式。 默认 `long`
+
+      - `'narrow'` - 最短格式，如「一」
+      - `'short'` - 短格式，如「周一」
+      - `'long'` - 完整格式，如「星期一」
+      ::
+    ::
+
+    ```ts
+    const date = formatter.getToday()
+
+    formatter.getDayOfWeekName(date, 'narrow')  // "一"
+    formatter.getDayOfWeekName(date, 'short')   // "周一"
+    formatter.getDayOfWeekName(date, 'long')    // "星期一"
+    formatter.getDayOfWeekName(date)            // "星期一" (默认)
+    ```
+  ::
   ::
 
   ::field{name="getWeeksInMonth()" type="(date: DateValue) => number"}
@@ -304,96 +335,6 @@ const isoString = formatter.toISO(today)
   当前使用的时区。
   ::
 ::
-
-## Example
-
-以下是一个完整的使用示例：
-
-```vue
-<script setup lang="ts">
-import { useAutoForm, useDateFormatter } from '@movk/nuxt'
-
-const { afz } = useAutoForm()
-const formatter = useDateFormatter()
-
-// 创建包含日期字段的表单
-const schema = afz.object({
-  startDate: afz.calendarDate('请选择开始日期'),
-  endDate: afz.calendarDate('请选择结束日期'),
-  workDays: afz.array(afz.calendarDate(), {
-    label: '工作日'
-  }),
-  birthday: afz.calendarDate('请选择出生日期')
-})
-
-const formData = ref({
-  startDate: formatter.getStartOfMonth(formatter.getToday()),
-  endDate: formatter.getEndOfMonth(formatter.getToday()),
-  workDays: [],
-  birthday: null
-})
-
-// 格式化显示
-const displayData = computed(() => {
-  if (!formData.value) return null
-  return formatter.convertToFormatted(formData.value)
-})
-
-// 提交时转换为 ISO 格式
-async function handleSubmit() {
-  const payload = formatter.convertToISO(formData.value)
-
-  // payload 示例：
-  // {
-  //   startDate: "2025-11-01",
-  //   endDate: "2025-11-30",
-  //   workDays: ["2025-11-05", "2025-11-12", "2025-11-19"],
-  //   birthday: "1990-01-01"
-  // }
-
-  await api.submit(payload)
-}
-
-// 日期范围处理
-const weekRange = computed(() => {
-  const today = formatter.getToday()
-  return {
-    start: formatter.getStartOfWeek(today),
-    end: formatter.getEndOfWeek(today)
-  }
-})
-
-const weekRangeText = computed(() => {
-  return formatter.formatRange(weekRange.value.start, weekRange.value.end)
-  // "2025年11月24日 - 2025年11月30日"
-})
-
-// 判断是否为周末
-const isWeekendToday = computed(() => {
-  return formatter.isWeekend(formatter.getToday())
-})
-</script>
-
-<template>
-  <div>
-    <MAutoForm
-      v-model="formData"
-      :schema="schema"
-      @submit="handleSubmit"
-    />
-
-    <div v-if="displayData" class="mt-4">
-      <h3>格式化显示</h3>
-      <pre>{{ displayData }}</pre>
-    </div>
-
-    <div class="mt-4">
-      <p>本周范围：{{ weekRangeText }}</p>
-      <p>今天是否为周末：{{ isWeekendToday }}</p>
-    </div>
-  </div>
-</template>
-```
 
 ## 配置示例
 
