docs: 更新 API 模块配置文档
- 配置文档：重写配置架构说明，突出公共/私有配置区别
- 安装文档：更新依赖版本要求
- useApiFetch 文档：调整配置字段引用
- useUploadWithProgress 文档：修正示例代码

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -3,27 +3,9 @@ title: 模块配置
 description: 了解 Movk Nuxt 模块的完整配置选项，包括组件前缀和 API 系统配置
 ---
 
-## 配置概览
+## 设置
 
 Movk Nuxt 使用 `movk` 作为配置键，在 `nuxt.config.ts` 中进行配置：
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  modules: ['@movk/nuxt'],
-
-  movk: {
-    // 组件前缀
-    prefix: 'M',
-
-    // API 系统配置
-    api: {
-      // ...
-    }
-  }
-})
-```
-
-## 基础配置
 
 ### prefix
 
@@ -56,10 +38,8 @@ export default defineNuxtConfig({
     api: {
       // 是否启用 API 功能
       enabled: true,
-
       // 默认使用的端点名称
       defaultEndpoint: 'default',
-
       // 是否启用调试模式
       debug: false
     }
@@ -126,7 +106,7 @@ export default defineNuxtConfig({
   ::
 
   ::field{name="headers" type="Record<string, string>"}
-  该端点的默认请求头。
+  该端点的默认请求头 **仅服务端使用，不会暴露给客户端**。
   ::
 
   ::field{name="auth" type="ApiAuthConfig"}
@@ -153,25 +133,22 @@ export default defineNuxtConfig({
       auth: {
         // 启用认证
         enabled: true,
-
         // Token 来源
         tokenSource: 'session',
-
         // Session 中 token 的路径
-        sessionTokenPath: 'token',
-
+        sessionTokenPath: 'custom',
         // Token 类型
         tokenType: 'Bearer',
-
         // 请求头名称
         headerName: 'Authorization',
-
-        // 401 时跳转登录页
-        redirectOnUnauthorized: false,
-        loginPath: '/login',
-
-        // 401 时清除 session
-        clearSessionOnUnauthorized: false
+        // 401 未授权处理配置
+        unauthorized: {
+          // 401 时跳转登录页
+          redirect: false,
+          loginPath: '/login',
+          // 401 时清除 session
+          clearSession: false
+        }
       }
     }
   }
@@ -205,16 +182,24 @@ export default defineNuxtConfig({
   请求头名称。默认 `'Authorization'`。
   ::
 
-  ::field{name="redirectOnUnauthorized" type="boolean"}
-  401 错误时是否自动跳转登录页。默认 `false`。
-  ::
+  ::field{name="unauthorized" type="ApiUnauthorizedConfig"}
+  401 未授权处理配置。
 
-  ::field{name="loginPath" type="string"}
-  登录页路径。默认 `'/login'`。
-  ::
+    ::collapsible
+      :::field-group
+        ::field{name="redirect" type="boolean"}
+        401 错误时是否自动跳转登录页。默认 `false`。
+        ::
 
-  ::field{name="clearSessionOnUnauthorized" type="boolean"}
-  401 错误时是否自动清除 session。默认 `false`。
+        ::field{name="loginPath" type="string"}
+        登录页路径。默认 `'/login'`。
+        ::
+
+        ::field{name="clearSession" type="boolean"}
+        401 错误时是否自动清除 session。默认 `false`。
+        ::
+      :::
+    ::
   ::
 ::
 
@@ -226,16 +211,13 @@ export default defineNuxtConfig({
 export default defineNuxtConfig({
   movk: {
     api: {
-      success: {
+      response: {
         // 成功状态码列表
         successCodes: [200, 0],
-
         // 状态码字段名
         codeKey: 'code',
-
         // 消息字段名
         messageKey: 'message',
-
         // 数据字段名
         dataKey: 'data'
       }
@@ -275,20 +257,18 @@ export default defineNuxtConfig({
       toast: {
         // 全局启用提示
         enabled: true,
-
         // 成功提示配置
         success: {
           show: true,
           color: 'success',
-          icon: 'i-lucide-check-circle',
+          icon: 'i-lucide-circle-check',
           duration: 3000
         },
-
         // 错误提示配置
         error: {
           show: true,
           color: 'error',
-          icon: 'i-lucide-alert-circle',
+          icon: 'i-lucide-circle-x',
           duration: 3000
         }
       }
@@ -304,36 +284,52 @@ export default defineNuxtConfig({
   是否全局启用提示。默认 `true`。
   ::
 
-  ::field{name="success.show" type="boolean"}
-  是否显示成功提示。默认 `true`。
+  ::field{name="success" type="ApiToastItemConfig"}
+  成功提示配置。
+
+    ::collapsible
+      :::field-group
+        ::field{name="show" type="boolean"}
+        是否显示成功提示。默认 `true`。
+        ::
+
+        ::field{name="color" type="string"}
+        成功提示颜色。默认 `'success'`。
+        ::
+
+        ::field{name="icon" type="string"}
+        成功提示图标。
+        ::
+
+        ::field{name="duration" type="number"}
+        成功提示持续时间（毫秒）。默认 `3000`。
+        ::
+      :::
+    ::
   ::
 
-  ::field{name="success.color" type="string"}
-  成功提示颜色。默认 `'success'`。
-  ::
+  ::field{name="error" type="ApiToastItemConfig"}
+  错误提示配置。
 
-  ::field{name="success.icon" type="string"}
-  成功提示图标。
-  ::
+    ::collapsible
+      :::field-group
+        ::field{name="show" type="boolean"}
+        是否显示错误提示。默认 `true`。
+        ::
 
-  ::field{name="success.duration" type="number"}
-  成功提示持续时间（毫秒）。默认 `3000`。
-  ::
+        ::field{name="color" type="string"}
+        错误提示颜色。默认 `'error'`。
+        ::
 
-  ::field{name="error.show" type="boolean"}
-  是否显示错误提示。默认 `true`。
-  ::
+        ::field{name="icon" type="string"}
+        错误提示图标。
+        ::
 
-  ::field{name="error.color" type="string"}
-  错误提示颜色。默认 `'error'`。
-  ::
-
-  ::field{name="error.icon" type="string"}
-  错误提示图标。
-  ::
-
-  ::field{name="error.duration" type="number"}
-  错误提示持续时间（毫秒）。默认 `3000`。
+        ::field{name="duration" type="number"}
+        错误提示持续时间（毫秒）。默认 `3000`。
+        ::
+      :::
+    ::
   ::
 ::
 
@@ -375,13 +371,15 @@ export default defineNuxtConfig({
         sessionTokenPath: 'token',
         tokenType: 'Bearer',
         headerName: 'Authorization',
-        redirectOnUnauthorized: true,
-        loginPath: '/login',
-        clearSessionOnUnauthorized: true
+        unauthorized: {
+          redirect: true,
+          loginPath: '/login',
+          clearSession: true
+        }
       },
 
       // 全局成功判断配置
-      success: {
+      response: {
         successCodes: [200, 0],
         codeKey: 'code',
         messageKey: 'message',
@@ -412,7 +410,7 @@ export default defineNuxtConfig({
 配置按以下优先级合并（后者覆盖前者）：
 
 1. **Schema 默认值** - Zod Schema 定义的默认值
-2. **全局配置** - `movk.api.auth`、`movk.api.toast`、`movk.api.success`
+2. **全局配置** - `movk.api.auth`、`movk.api.toast`、`movk.api.response`
 3. **端点配置** - `movk.api.endpoints[name].auth` 等
 4. **请求级配置** - `useApiFetch` 的 `toast` 选项等
 
@@ -463,9 +461,9 @@ Movk Nuxt 依赖以下模块，模块会自动检查版本兼容性：
 | 模块 | 最低版本 | 说明 |
 |------|----------|------|
 | `@nuxt/image` | >= 2.0.0 | 图片处理 |
-| `@nuxt/ui` | >= 4.2.1 | UI 组件库 |
+| `@nuxt/ui` | >= 4.3.0 | UI 组件库 |
 | `@vueuse/nuxt` | >= 14.1.0 | 工具函数 |
-| `nuxt-auth-utils` | >= 0.5.25 | 认证管理（可选，用于 useApiAuth） |
+| `nuxt-auth-utils` | >= 0.5.26 | 认证管理（可选，用于 useApiAuth） |
 
 ::tip{icon="i-lucide-lightbulb"}
 如果不使用 API 认证功能，`nuxt-auth-utils` 是可选的。
