--- a/docs/content/docs/4.composables/05.use-upload-with-progress.md
+++ b/docs/content/docs/4.composables/05.use-upload-with-progress.md
@@ -219,7 +219,7 @@ await upload('/api/upload', file, {
 // 触发 onError 回调,显示错误 Toast
 ```
 
-业务状态码规则由模块配置的 `success` 选项控制。
+业务状态码规则由模块配置的 `response` 选项控制。
 
 ## 取消上传
 
