--- a/docs/content/docs/4.composables/02.use-api-fetch.md
+++ b/docs/content/docs/4.composables/02.use-api-fetch.md
@@ -325,14 +325,14 @@ const { data } = await useApiFetch<User>('/user')
 
 ## 业务状态码检查
 
-默认情况下，`useApiFetch` 会检查业务状态码(通过模块配置的 `success` 选项):
+默认情况下，`useApiFetch` 会检查业务状态码(通过模块配置的 `response` 选项):
 
 ```ts
 // 默认配置
 {
-  success: {
+  response: {
     codeKey: 'code',
-    successCodes: [200]
+    successCodes: [200, 0]
   }
 }
 ```
@@ -496,11 +496,13 @@ const { data } = await useApiFetch<User>('/user/profile')
 ```ts
 // nuxt.config.ts
 export default defineNuxtConfig({
-  movkApi: {
-    auth: {
-      headerName: 'Authorization',
-      tokenType: 'Bearer',
-      sessionTokenPath: 'token'
+  movk: {
+    api: {
+      auth: {
+        headerName: 'Authorization',
+        tokenType: 'Bearer',
+        sessionTokenPath: 'token'
+      }
     }
   }
 })
