docs(composables): 优化 API 文档格式和内容结构
- 统一文档格式，改进字段组织方式
- 在 useAutoForm 文档中添加控件映射表和自定义控件注册说明
- 简化 useApiFetch、useApiAuth 等文档，移除冗余信息
- 改进代码示例的可读性和一致性
- 修复文档中的格式问题和标点符号

--- a/docs/content/docs/4.composables/01.use-auto-form.md
+++ b/docs/content/docs/4.composables/01.use-auto-form.md
@@ -5,7 +5,7 @@ description: 用于创建类型化 Zod Schema 和管理 AutoForm 控件的 compo
 
 ## Usage
 
-使用自动导入的 `useAutoForm` composable 创建类型化的 Zod Schema，为 [AutoForm](/docs/auto-form) 组件提供验证规则和控件配置。
+使用自动导入的 `useAutoForm` composable 创建类型化的 Zod Schema，为 [`AutoForm`](/docs/auto-form) 组件提供验证规则和控件配置。
 
 ```vue
 <script setup lang="ts">
@@ -32,6 +32,61 @@ const formData = ref()
 使用 `afz` 工厂创建的 Schema 会自动拦截 Zod 的克隆方法，确保元数据在链式调用时不会丢失。
 ::
 
+## 自定义控件注册
+
+当使用自定义控件时，需要通过 `defineControl` 辅助函数定义：
+
+```ts
+const { afz, defineControl } = useAutoForm({
+  myInput: defineControl({
+    component: MyCustomInput,
+    controlProps: { class: 'w-full' }
+  })
+})
+
+// 现在可以在 Schema 中使用
+const schema = afz.string({
+  type: 'myInput',
+  controlProps: { variant: 'outline' }
+})
+```
+
+## 控件映射
+
+### 默认
+
+| Schema 类型 | 默认控件 | 说明 |
+|------------|---------|------|
+| `string` | `UInput`{lang="ts-type"} | 文本输入框 |
+| `number` | `UInputNumber`{lang="ts-type"} | 数字输入框 |
+| `boolean` | `UCheckbox`{lang="ts-type"} | 复选框 |
+| `enum` | `USelect`{lang="ts-type"} | 下拉选择 |
+| `file` | `UFileUpload`{lang="ts-type"} | 文件上传 |
+| `calendarDate` | `DatePicker`{lang="ts-type"} | 日期选择器 |
+
+### 扩展控件类型
+
+通过 `type` 元数据可以使用以下扩展控件：
+
+| type 类型 | 控件 | 说明 |
+|------|------|----|
+| `switch` | `USwitch`{lang="ts-type"} | 开关 |
+| `textarea` | `UTextarea`{lang="ts-type"} | 多行文本输入框 |
+| `slider` | `USlider`{lang="ts-type"} | 滑块 |
+| `pinInput` | `UPinInput`{lang="ts-type"} | 验证码输入框 |
+| `inputTags` | `UInputTags`{lang="ts-type"} | 标签输入 |
+| `selectMenu` | `USelectMenu`{lang="ts-type"} | 选择菜单 |
+| `inputMenu` | `UInputMenu`{lang="ts-type"} | 输入菜单 |
+| `checkboxGroup` | `UCheckboxGroup`{lang="ts-type"} | 复选框组 |
+| `radioGroup` | `URadioGroup`{lang="ts-type"} | 单选框组 |
+| `withClear` | `UInput`{lang="ts-type"} | 带清除按钮的输入框 |
+| `withPasswordToggle` | `UInput`{lang="ts-type"} | 密码显示切换 |
+| `withCopy` | `UInput`{lang="ts-type"} | 带复制按钮 |
+| `withCharacterLimit` | `UInput`{lang="ts-type"} | 字符计数限制 |
+| `colorChooser` | `UColorPicker`{lang="ts-type"} | 颜色选择器 |
+| `starRating` | `StarRating`{lang="ts-type"} | 星级评分 |
+| `slideVerify` | `SlideVerify`{lang="ts-type"} | 滑动验证 |
+
 ## API
 
 ### useAutoForm()
@@ -43,19 +98,20 @@ const formData = ref()
 #### Parameters
 
 ::field-group
+
   ::field{name="controls" type="AutoFormControls"}
   自定义控件映射对象，用于扩展或覆盖默认控件。
 
-  ::collapsible
-    ```ts
-    const { afz } = useAutoForm({
-      myCustomInput: defineControl({
-        component: CustomInputComponent,
-        controlProps: { class: 'w-full' }
+    ::collapsible
+      ```ts
+      const { afz } = useAutoForm({
+        myCustomInput: defineControl({
+          component: CustomInputComponent,
+          controlProps: { class: 'w-full' }
+        })
       })
-    })
-    ```
-  ::
+      ```
+    ::
   ::
 ::
 
@@ -144,22 +200,23 @@ const formData = ref()
 #### 对象类型
 
 ::field-group
+
   ::field{name="afz.object()" type="(shape: ZodRawShape, meta?: AutoFormMeta) => ZodObject"}
   创建标准对象 Schema。支持柯里化写法以获得更好的类型推断。
 
-  ::collapsible
-    ```ts
-    // 推荐：柯里化写法（更好的类型推断）
-    const schema = afz.object<MyType>()({
-      field: afz.string()
-    })
+    ::collapsible
+      ```ts
+      // 推荐：柯里化写法（更好的类型推断）
+      const schema = afz.object<MyType>()({
+        field: afz.string()
+      })
 
-    // 也可以：直接传参
-    const schema = afz.object({
-      field: afz.string()
-    })
-    ```
-  ::
+      // 也可以：直接传参
+      const schema = afz.object({
+        field: afz.string()
+      })
+      ```
+    ::
   ::
 
   ::field{name="afz.looseObject()" type="(shape: ZodRawShape, meta?: AutoFormMeta) => ZodObject"}
@@ -174,21 +231,22 @@ const formData = ref()
 #### 布局系统
 
 ::field-group
+
   ::field{name="afz.layout()" type="<C extends IsComponent>(config: AutoFormLayoutConfig<C>) => ZodType"}
   创建布局字段，用于在表单中插入布局组件（如 `UFormGrid`, `UCard` 等）。
 
-  ::collapsible
-    ```ts
-    const schema = afz.object({
-      $layout: afz.layout({
-        component: 'UFormGrid',
-        props: { columns: 2 }
-      }),
-      firstName: afz.string(),
-      lastName: afz.string()
-    })
-    ```
-  ::
+    ::collapsible
+      ```ts
+      const schema = afz.object({
+        $layout: afz.layout({
+          component: 'UFormGrid',
+          props: { columns: 2 }
+        }),
+        firstName: afz.string(),
+        lastName: afz.string()
+      })
+      ```
+    ::
   ::
 ::
 
@@ -219,111 +277,23 @@ const formData = ref()
 
   ::field{name="error" type="string"}
   自定义错误消息。
+
+    ::collapsible
+    ```ts
+    // 简化写法：仅错误消息
+    afz.string('这个字段是必填的')
+
+    // 完整写法：带控件配置
+    afz.string({
+      type: 'textarea',
+      label: '个人简介',
+      placeholder: '请输入个人简介',
+      controlProps: { rows: 4 }
+    })
+    ```
+    ::
   ::
 ::
-
-```ts
-// 简化写法：仅错误消息
-afz.string('这个字段是必填的')
-
-// 完整写法：带控件配置
-afz.string({
-  type: 'textarea',
-  label: '个人简介',
-  placeholder: '请输入个人简介',
-  controlProps: { rows: 4 }
-})
-```
-
-## 默认控件映射
-
-| Schema 类型 | 默认控件 | 说明 |
-|------------|---------|------|
-| `string` | `UInput` | 文本输入框 |
-| `number` | `UInputNumber` | 数字输入框 |
-| `boolean` | `UCheckbox` | 复选框 |
-| `enum` | `USelect` | 下拉选择 |
-| `file` | `UFileUpload` | 文件上传 |
-| `calendarDate` | `DatePicker` | 日期选择器 |
-
-### 扩展控件类型
-
-通过 `type` 元数据可以使用以下扩展控件：
-
-- `switch` - 开关组件 (`USwitch`)
-- `textarea` - 多行文本 (`UTextarea`)
-- `slider` - 滑块 (`USlider`)
-- `pinInput` - PIN 码输入 (`UPinInput`)
-- `inputTags` - 标签输入 (`UInputTags`)
-- `selectMenu` - 下拉菜单 (`USelectMenu`)
-- `inputMenu` - 输入菜单 (`UInputMenu`)
-- `checkboxGroup` - 复选框组 (`UCheckboxGroup`)
-- `radioGroup` - 单选框组 (`URadioGroup`)
-- `withClear` - 带清除按钮的输入框
-- `withPasswordToggle` - 密码显示切换
-- `withCopy` - 带复制按钮
-- `withCharacterLimit` - 字符计数限制
-- `colorChooser` - 颜色选择器
-- `starRating` - 星级评分
-
-## Caveats
-
-### Zod v4 规范
-
-从 Zod v4 开始，某些字符串验证方法已被弃用。使用 `afz` 时应遵循以下规范：
-
-```ts
-// ✅ 推荐：使用专用函数
-afz.email('请输入邮箱')
-afz.url('请输入 URL')
-afz.uuid('请输入 UUID')
-
-// ❌ 避免：已弃用的写法
-afz.string().email()
-afz.string().url()
-afz.string().uuid()
-```
-
-### 元数据持久化
-
-使用 `afz` 工厂创建的 Schema 会自动拦截以下克隆方法，确保元数据不丢失：
-
-- `.optional()` - 设为可选
-- `.nullable()` - 允许 null
-- `.default()` - 设置默认值
-- `.describe()` - 添加描述
-- `.meta()` - 添加元数据
-- `.refine()` - 添加自定义验证
-- `.transform()` - 添加转换函数
-
-```ts
-// 元数据会在链式调用中自动传递
-const schema = afz.string({
-  type: 'withClear',
-  label: '用户名'
-})
-  .optional()      // 元数据保留
-  .default('')     // 元数据保留
-```
-
-### 自定义控件注册
-
-当使用自定义控件时，需要通过 `defineControl` 辅助函数定义：
-
-```ts
-const { afz, defineControl } = useAutoForm({
-  myInput: defineControl({
-    component: MyCustomInput,
-    controlProps: { class: 'w-full' }
-  })
-})
-
-// 现在可以在 Schema 中使用
-const schema = afz.string({
-  type: 'myInput',
-  controlProps: { variant: 'outline' }
-})
-```
 
 ## Changelog
 
