--- a/docs/content/docs/4.composables/03.use-client-api-fetch.md
+++ b/docs/content/docs/4.composables/03.use-client-api-fetch.md
@@ -44,7 +44,7 @@ const updatePreferences = async (prefs: UserPreferences) => {
 适用场景:用户偏好设置、实时通知、客户端缓存数据等非 SEO 敏感内容。对于需要 SEO 的数据，请使用 [`useApiFetch`](/docs/composables/use-api-fetch)。
 ::
 
-::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api-系统配置"}
+::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api"}
 了解 API 系统的全局配置选项
 ::
 
@@ -66,10 +66,10 @@ const updatePreferences = async (prefs: UserPreferences) => {
   ::field{name="options" type="UseApiFetchOptions<ResT, DataT>"}
   请求配置选项。完整选项参考 [`useApiFetch`](/docs/composables/use-api-fetch#parameters)。
 
-  ::collapsible
-    - `server: false` - 禁用服务端执行
-    - `lazy: true` - 启用 lazy 模式
-  ::
+    ::collapsible
+      - `server: false` - 禁用服务端执行
+      - `lazy: true` - 启用 lazy 模式
+    ::
   ::
 ::
 
