--- a/docs/content/docs/4.composables/04.use-api-auth.md
+++ b/docs/content/docs/4.composables/04.use-api-auth.md
@@ -51,83 +51,10 @@ watchEffect(() => {
 `useApiAuth` 依赖 `nuxt-auth-utils` 模块。确保已安装并正确配置该模块。
 ::
 
-::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#认证配置"}
+::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#auth"}
 了解认证相关的全局配置选项
 ::
 
-## API
-
-### useApiAuth()
-
-`useApiAuth(): UseApiAuthReturn`{lang="ts-type"}
-
-创建认证管理器。
-
-#### Returns
-
-返回包含以下方法和属性的认证管理器对象:
-
-::field-group
-  ::field{name="login()" type="<LoginRData = unknown>(options: LoginOptions<LoginRData>) => Promise<LoginResult>"}
-  执行登录流程。
-
-  ::collapsible
-    **Parameters**
-
-    ::field-group
-      ::field{name="loginPath" type="string" required}
-      登录接口路径。
-      ::
-
-      ::field{name="credentials" type="Record<string, unknown>" required}
-      登录凭证(如用户名、密码)。
-      ::
-
-      ::field{name="userInfoPath" type="string"}
-      用户信息接口路径。如果提供，登录后会使用 token 调用此接口获取用户信息。
-      ::
-
-      ::field{name="tokenExtractor" type="(response: ApiResponse<LoginRData>) => string | null | undefined"}
-      自定义 token 提取函数。默认从 `data.token`、`data.accessToken` 或 `token` 字段提取。
-      ::
-
-      ::field{name="sessionBuilder" type="(user: User, token: string) => UserSession"}
-      自定义 session 构建函数。默认返回 `{ user, token, loggedInAt }`。
-      ::
-
-      ::field{name="endpoint" type="string"}
-      使用指定的端点配置。
-      ::
-    ::
-
-    **Returns**
-
-    返回 `Promise<LoginResult>`，包含:
-    - `user: User` - 用户信息
-    - `token: string` - 访问令牌
-  ::
-  ::
-
-  ::field{name="loggedIn" type="Ref<boolean>"}
-  是否已登录(响应式)。
-  ::
-
-  ::field{name="user" type="Ref<User | null>"}
-  当前用户信息(响应式)。
-  ::
-
-  ::field{name="session" type="Ref<UserSession | null>"}
-  当前 session 数据(响应式)。
-  ::
-
-  ::field{name="fetch()" type="() => Promise<void>"}
-  刷新 session 状态。
-  ::
-
-  ::field{name="clear()" type="() => Promise<void>"}
-  清除 session(登出)。
-  ::
-::
 
 ## 登录流程
 
@@ -169,7 +96,9 @@ await login({
 2. `data.accessToken`
 3. `token`
 
+::tip
 如果 API 响应格式不同，可以自定义提取逻辑:
+::
 
 ```ts
 // 自定义 token 路径
@@ -199,7 +128,9 @@ await login({
 }
 ```
 
+::tip
 可以自定义 session 结构，例如分离敏感数据:
+::
 
 ```ts
 await login({
@@ -220,7 +151,9 @@ await login({
 })
 ```
 
+::note
 `nuxt-auth-utils` 会自动加密 `secure` 字段，保护敏感数据。
+::
 
 ## 用户信息获取
 
@@ -269,169 +202,80 @@ await login({
 2. 使用 token 调用 `/auth/me`
 3. 将用户信息接口的响应作为用户数据
 
-## Example
+## API
 
-以下是一个完整的使用示例:
+### useApiAuth()
 
-```vue
-<script setup lang="ts">
-interface LoginForm {
-  username: string
-  password: string
-}
+`useApiAuth(): UseApiAuthReturn`{lang="ts-type"}
 
-interface User {
-  id: number
-  name: string
-  email: string
-  avatar?: string
-  role: 'admin' | 'user'
-}
+创建认证管理器。
 
-const { login, clear, loggedIn, user } = useApiAuth()
+#### Returns
 
-// 登录表单
-const loginForm = ref<LoginForm>({
-  username: '',
-  password: ''
-})
+返回包含以下方法和属性的认证管理器对象:
 
-const loginError = ref<string | null>(null)
-const loginLoading = ref(false)
+::field-group
 
-// 1. 基础登录
-const handleBasicLogin = async () => {
-  loginLoading.value = true
-  loginError.value = null
+  ::field{name="login()" type="<LoginRData = unknown>(options: LoginOptions<LoginRData>) => Promise<LoginResult>"}
+  执行登录流程。
 
-  try {
-    await login({
-      loginPath: '/auth/login',
-      credentials: loginForm.value
-    })
+    ::collapsible
+      **Parameters**
 
-    // 登录成功
-    navigateTo('/dashboard')
-  } catch (error) {
-    loginError.value = error instanceof Error ? error.message : '登录失败'
-  } finally {
-    loginLoading.value = false
-  }
-}
+      ::field-group
+        ::field{name="loginPath" type="string" required}
+        登录接口路径。
+        ::
 
-// 2. 带用户信息接口的登录
-const handleLoginWithUserInfo = async () => {
-  try {
-    await login({
-      loginPath: '/auth/login',
-      credentials: loginForm.value,
-      userInfoPath: '/auth/me'  // 登录后获取用户信息
-    })
+        ::field{name="credentials" type="Record<string, unknown>" required}
+        登录凭证(如用户名、密码)。
+        ::
 
-    navigateTo('/dashboard')
-  } catch (error) {
-    console.error('登录失败:', error)
-  }
-}
+        ::field{name="userInfoPath" type="string"}
+        用户信息接口路径。如果提供，登录后会使用 token 调用此接口获取用户信息。
+        ::
 
-// 3. 自定义 token 提取和 session 构建
-const handleAdvancedLogin = async () => {
-  try {
-    const result = await login({
-      loginPath: '/auth/login',
-      credentials: loginForm.value,
-      // 自定义 token 提取
-      tokenExtractor: (res) => {
-        // 从特殊字段提取
-        return res.data?.accessToken || res.data?.jwt
-      },
-      // 自定义 session 构建
-      sessionBuilder: (user, token) => ({
-        user: {
-          id: user.id,
-          name: user.name,
-          email: user.email,
-          avatar: user.avatar
-        },
-        secure: {
-          token,
-          // 保存额外的敏感数据
-          refreshToken: user.refreshToken,
-          permissions: user.permissions,
-          expiresAt: user.expiresAt
-        }
-      })
-    })
+        ::field{name="tokenExtractor" type="(response: ApiResponse<LoginRData>) => string | null | undefined"}
+        自定义 token 提取函数。默认从 `data.token`、`data.accessToken` 或 `token` 字段提取。
+        ::
 
-    console.log('登录成功:', result)
-    navigateTo('/dashboard')
-  } catch (error) {
-    console.error('登录失败:', error)
-  }
-}
+        ::field{name="sessionBuilder" type="(user: User, token: string) => UserSession"}
+        自定义 session 构建函数。默认返回 `{ user, token, loggedInAt }`。
+        ::
 
-// 4. 使用不同端点登录
-const handleAdminLogin = async () => {
-  try {
-    await login({
-      loginPath: '/admin/login',
-      credentials: loginForm.value,
-      endpoint: 'admin'  // 使用 admin 端点
-    })
+        ::field{name="endpoint" type="string"}
+        使用指定的端点配置。
+        ::
+      ::
 
-    navigateTo('/admin/dashboard')
-  } catch (error) {
-    console.error('管理员登录失败:', error)
-  }
-}
+      **Returns**
 
-// 5. 登出
-const handleLogout = async () => {
-  await clear()
-  navigateTo('/login')
-}
+      返回 `Promise<LoginResult>`，包含:
+      - `user: User` - 用户信息
+      - `token: string` - 访问令牌
+    ::
+  ::
 
-// 6. 监听登录状态
-watchEffect(() => {
-  if (loggedIn.value && user.value) {
-    console.log('用户已登录:', user.value.name)
-  } else {
-    console.log('用户未登录')
-  }
-})
+  ::field{name="loggedIn" type="Ref<boolean>"}
+  是否已登录(响应式)。
+  ::
 
-// 7. 路由守卫
-onMounted(() => {
-  if (!loggedIn.value) {
-    navigateTo('/login')
-  }
-})
+  ::field{name="user" type="Ref<User | null>"}
+  当前用户信息(响应式)。
+  ::
 
-// 8. 自动刷新 token(示例)
-const refreshToken = async () => {
-  try {
-    const { data } = await $api.$fetch('/auth/refresh', {
-      method: 'POST'
-    })
+  ::field{name="session" type="Ref<UserSession | null>"}
+  当前 session 数据(响应式)。
+  ::
 
-    // 更新 session
-    await login({
-      loginPath: '/auth/login',
-      credentials: {},  // 不需要凭证
-      tokenExtractor: () => data.token,
-      sessionBuilder: (_, token) => ({
-        user: user.value,
-        token
-      })
-    })
-  } catch (error) {
-    // Token 刷新失败,登出
-    await clear()
-    navigateTo('/login')
-  }
-}
-</script>
-```
+  ::field{name="fetch()" type="() => Promise<void>"}
+  刷新 session 状态。
+  ::
+
+  ::field{name="clear()" type="() => Promise<void>"}
+  清除 session(登出)。
+  ::
+::
 
 ## Changelog
 
