--- a/docs/content/docs/4.composables/06.use-download-with-progress.md
+++ b/docs/content/docs/4.composables/06.use-download-with-progress.md
@@ -52,90 +52,8 @@ const handleCancel = () => {
 适用于需要展示下载进度的场景，如大文件导出、批量下载等。对于无需进度的小文件，可以直接使用 `$api.$fetch`。
 ::
 
-::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api-系统配置"}
+::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api"}
 了解 API 系统的全局配置选项
-::
-
-## API
-
-### useDownloadWithProgress()
-
-`useDownloadWithProgress(): { progress, downloading, error, download, abort }`{lang="ts-type"}
-
-创建下载管理器。
-
-#### Returns
-
-返回包含以下方法和属性的下载管理器对象:
-
-::field-group
-  ::field{name="progress" type="Ref<number>"}
-  下载进度，范围 0-100。
-  ::
-
-  ::field{name="downloading" type="Ref<boolean>"}
-  是否正在下载中。
-  ::
-
-  ::field{name="error" type="Ref<Error | null>"}
-  错误信息(如果下载失败)。
-  ::
-
-  ::field{name="download()" type="(url: string, options?: DownloadWithProgressOptions) => Promise<{ success: boolean, error: Error | null }>"}
-  执行下载。
-
-  ::collapsible
-    **Parameters**
-
-    ::field-group
-      ::field{name="url" type="string" required}
-      下载文件的 URL。
-      ::
-
-      ::field{name="options" type="DownloadWithProgressOptions"}
-      下载配置选项。
-
-      ::collapsible
-        ::field-group
-          ::field{name="filename" type="string"}
-          自定义文件名。不提供时从响应头的 `Content-Disposition` 或 URL 中提取。
-          ::
-
-          ::field{name="headers" type="Record<string, string>"}
-          额外的请求头。
-          ::
-
-          ::field{name="toast" type="RequestToastOptions | false"}
-          Toast 提示配置。设为 `false` 禁用 Toast。
-          ::
-
-          ::field{name="endpoint" type="string"}
-          使用指定的端点配置。
-          ::
-
-          ::field{name="onSuccess" type="(filename: string) => void"}
-          下载成功回调，接收最终的文件名。
-          ::
-
-          ::field{name="onError" type="(error: Error) => void"}
-          下载失败回调，接收错误对象。
-          ::
-        ::
-      ::
-      ::
-    ::
-
-    **Returns**
-
-    返回 `Promise<{ success: boolean, error: Error | null }>`:
-    - `success` - 下载是否成功
-    - `error` - 错误信息(成功时为 `null`)
-  ::
-  ::
-
-  ::field{name="abort()" type="() => void"}
-  中止当前下载，重置进度和状态。
-  ::
 ::
 
 ## 文件名提取
@@ -201,122 +119,7 @@ const handleCancel = () => {
 - 不会触发 `onError` 回调
 - 不会显示 Toast 提示
 
-## Example
-
-以下是一个完整的使用示例:
-
-```vue
-<script setup lang="ts">
-const { progress, downloading, error, download, abort } = useDownloadWithProgress()
-
-const downloadHistory = ref<Array<{ filename: string, time: string }>>([])
-
-// 1. 基础下载
-const handleBasicDownload = async () => {
-  await download('/api/export/report.pdf')
-}
-
-// 2. 自定义文件名
-const handleCustomFilename = async () => {
-  const date = new Date().toISOString().split('T')[0]
-  await download('/api/export/report', {
-    filename: `report-${date}.pdf`
-  })
-}
-
-// 3. 带回调的下载
-const handleDownloadWithCallbacks = async () => {
-  const result = await download('/api/export/data.csv', {
-    filename: 'users-export.csv',
-    onSuccess: (filename) => {
-      // 记录下载历史
-      downloadHistory.value.push({
-        filename,
-        time: new Date().toLocaleString()
-      })
-    },
-    onError: (error) => {
-      console.error('下载失败:', error.message)
-    }
-  })
-
-  if (result.success) {
-    console.log('下载完成')
-  }
-}
-
-// 4. 自定义请求头
-const handleDownloadWithHeaders = async () => {
-  await download('/api/export/report', {
-    headers: {
-      'X-Export-Format': 'PDF',
-      'X-Include-Images': 'true'
-    }
-  })
-}
-
-// 5. 禁用 Toast
-const handleSilentDownload = async () => {
-  await download('/api/export/background-data', {
-    toast: false  // 静默下载
-  })
-}
-
-// 6. 使用不同端点
-const handleAdminDownload = async () => {
-  await download('/admin/reports/export', {
-    endpoint: 'admin'
-  })
-}
-
-// 7. 批量下载
-const downloadList = ref([
-  { url: '/api/export/report1.pdf', filename: 'report-1.pdf' },
-  { url: '/api/export/report2.pdf', filename: 'report-2.pdf' },
-  { url: '/api/export/report3.pdf', filename: 'report-3.pdf' }
-])
-
-const currentDownloadIndex = ref(0)
-
-const handleBatchDownload = async () => {
-  for (let i = 0; i < downloadList.value.length; i++) {
-    currentDownloadIndex.value = i
-    const item = downloadList.value[i]
-
-    const result = await download(item.url, {
-      filename: item.filename,
-      toast: { success: false }  // 禁用单个文件的成功提示
-    })
-
-    if (!result.success) {
-      console.error(`下载失败: ${item.filename}`)
-      break
-    }
-  }
-
-  // 批量下载完成
-  if (currentDownloadIndex.value === downloadList.value.length - 1) {
-    console.log('所有文件下载完成')
-  }
-}
-
-// 8. 取消下载
-const handleCancel = () => {
-  abort()
-}
-
-// 9. 监听错误
-watch(error, (newError) => {
-  if (newError) {
-    console.error('下载错误:', newError.message)
-  }
-})
-</script>
-```
-
-## Caveats
-
-### 认证集成
+## 认证集成
 
 `useDownloadWithProgress` 会自动从 session 获取 token 并添加到请求头:
 
@@ -335,6 +138,89 @@ await download('/api/export', {
   }
 })
 ```
+
+## API
+
+### useDownloadWithProgress()
+
+`useDownloadWithProgress(): { progress, downloading, error, download, abort }`{lang="ts-type"}
+
+创建下载管理器。
+
+#### Returns
+
+返回包含以下方法和属性的下载管理器对象:
+
+::field-group
+  ::field{name="progress" type="Ref<number>"}
+  下载进度，范围 0-100。
+  ::
+
+  ::field{name="downloading" type="Ref<boolean>"}
+  是否正在下载中。
+  ::
+
+  ::field{name="error" type="Ref<Error | null>"}
+  错误信息(如果下载失败)。
+  ::
+
+  ::field{name="download()" type="(url: string, options?: DownloadWithProgressOptions) => Promise<{ success: boolean, error: Error | null }>"}
+  执行下载。
+
+    ::collapsible
+      **Parameters**
+
+      ::field-group
+        ::field{name="url" type="string" required}
+        下载文件的 URL。
+        ::
+
+        ::field{name="options" type="DownloadWithProgressOptions"}
+        下载配置选项。
+
+          ::collapsible
+
+            ::field-group
+              ::field{name="filename" type="string"}
+              自定义文件名。不提供时从响应头的 `Content-Disposition` 或 URL 中提取。
+              ::
+
+              ::field{name="headers" type="Record<string, string>"}
+              额外的请求头。
+              ::
+
+              ::field{name="toast" type="RequestToastOptions | false"}
+              Toast 提示配置。设为 `false` 禁用 Toast。
+              ::
+
+              ::field{name="endpoint" type="string"}
+              使用指定的端点配置。
+              ::
+
+              ::field{name="onSuccess" type="(filename: string) => void"}
+              下载成功回调，接收最终的文件名。
+              ::
+
+              ::field{name="onError" type="(error: Error) => void"}
+              下载失败回调，接收错误对象。
+              ::
+            ::
+          ::
+        ::
+      ::
+
+      **Returns**
+
+      返回 `Promise<{ success: boolean, error: Error | null }>`:
+      - `success` - 下载是否成功
+      - `error` - 错误信息(成功时为 `null`)
+    ::
+  ::
+
+  ::field{name="abort()" type="() => void"}
+  中止当前下载，重置进度和状态。
+  ::
+::
 
 ## Changelog
 
